--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-animation-next",
+  "name": "ensuria-test",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -8,16 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.28",
+    "nanoid": "^5.0.1",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "sharp": "^0.32.6",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "typescript": "^5"
   }
 }
