--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.28",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +22,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/styled-components": "^5.1.28"
   }
 }
